# discord-bot

./: Cargo.toml  README.md  run
src/: main.rs  ping_defex.rs  reqwest_audio_data.rs  responses.rs  uwuify.rs  wav.rs
src/comm/: join.rs  leave.rs  loop_among.rs  mod.rs  now_playing.rs  pause.rs  ping.rs  play.rs  queue.rs  say.rs  skip.rs
src/voice_recog/: mod.rs  model_test.rs  receive.rs
